JWT on login; fix
